tests/transpiler/x/zig/two-sum.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/two-sum.zig:17:33: error: array literal requires address-of operator (&) to coerce to slice type '[]i64'
